--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,18 +31,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="70dp"
         android:backgroundTint="#F3F6F9"
         android:fontFamily="@font/montserrat"
-        android:insetLeft="0dp"
         android:insetTop="0dp"
-        android:insetRight="0dp"
         android:insetBottom="0dp"
-        android:paddingLeft="19dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
         android:text="Login with Google"
         android:textAllCaps="false"
+        android:letterSpacing="0.03"
         android:textColor="@color/black"
         android:textFontWeight="500"
         android:textSize="12sp"
@@ -57,11 +53,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#F3F6F9"
-        android:insetLeft="0dp"
+        android:letterSpacing="0.03"
         android:insetTop="0dp"
-        android:insetRight="0dp"
         android:insetBottom="0dp"
         android:paddingLeft="19dp"
         android:paddingTop="10dp"
@@ -81,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginTop="42dp">
+        android:layout_marginTop="40dp">
 
                 <TextView
                     android:id="@+id/or"
@@ -103,13 +98,13 @@
                     android:layout_toLeftOf="@id/or"
                     android:background="#000000" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="39dp"
-                    android:layout_toRightOf="@id/or"
-                    android:background="#000000" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="39dp"
+            android:layout_toRightOf="@id/or"
+            android:background="#000000" />
 
     </RelativeLayout>
 
@@ -120,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="26dp"
         android:layout_marginRight="38dp"
         app:boxBackgroundColor="#F3F6F9"
         app:boxCornerRadiusBottomEnd="5dp"
@@ -166,7 +161,9 @@
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
-        app:errorEnabled="true">
+        app:errorEnabled="true"
+        app:endIconMode="password_toggle"
+        app:endIconTint="@color/hint_color">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -186,7 +183,7 @@
         android:id="@+id/forgot_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="14dp"
         android:layout_marginRight="39dp"
         android:gravity="right"
         android:text="Forgot Password"
@@ -195,11 +192,10 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginBtn"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="36dp"
         android:layout_marginHorizontal="82dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:backgroundTint="#2D8DFF"
-        android:lineHeight="17sp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="Login"
@@ -216,8 +212,9 @@
         android:layout_height="wrap_content"
         android:text="@string/dont_have"
         android:textSize="12sp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_marginTop="26dp"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="30dp"/>
 
         </LinearLayout>
     </ScrollView>
