--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:orientation="vertical"
     tools:context=".UI.SignupLogin.SignUpActivity">
 
@@ -31,18 +30,14 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/signup_google_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
                 android:layout_marginHorizontal="68dp"
-                android:layout_marginTop="161dp"
+                android:layout_marginTop="181dp"
                 android:backgroundTint="#F3F6F9"
                 android:fontFamily="@font/montserrat"
-                android:insetLeft="0dp"
                 android:insetTop="0dp"
-                android:insetRight="0dp"
                 android:insetBottom="0dp"
-                android:paddingLeft="19dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="11dp"
+                android:letterSpacing="0.03"
                 android:text="Sign Up with Google"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -57,17 +52,13 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/signup_fb_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
                 android:layout_marginHorizontal="68dp"
                 android:layout_marginTop="32dp"
                 android:backgroundTint="#F3F6F9"
-                android:insetLeft="0dp"
                 android:insetTop="0dp"
-                android:insetRight="0dp"
                 android:insetBottom="0dp"
-                android:paddingLeft="19dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="11dp"
+                android:letterSpacing="0.03"
                 android:text="Sign Up with Facebook"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -166,6 +157,7 @@
                 android:textFontWeight="700"
                 app:cornerRadius="5dp"
                 app:elevation="4dp"
+                android:letterSpacing="0.03"
                 />
 
             <TextView
